# bangor-icp-1029-assignment

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  word_search.c
doc/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  menudata.js  struct_difficulty.html  struct_generated__word.html  word__search_8c.html  word__search_8c_source.html
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_6.js  variables_7.js  variables_8.js
